--- a/src/components/18.NavBar.css
+++ b/src/components/18.NavBar.css
@@ -10,7 +10,7 @@
   left: 0;
   right: 0;
   z-index: 1000;
-  padding: 0 10px; 
+  padding: 20px 10px; 
   height: 40px;    
   line-height: 30px; 
 
@@ -21,6 +21,8 @@
 .logo {
   font-size: 1.8rem;
   font-weight: bold;
+  margin: 0px 40px;
+ 
 }
 
 /* Navigation Links Styling */
